--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,18 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
 enable_language(CXX)
 
 find_package(Kodi REQUIRED)
+find_package(kodiplatform REQUIRED)
 find_package(hdhomerun REQUIRED)
 
-include_directories(${kodiplatform_INCLUDE_DIRS})
+include_directories(${kodiplatform_INCLUDE_DIRS}
+                    ${p8-platform_LIBRARIES}
+                    ${HDHOMERUN_INCLUDE_DIRS})
 
 set(DEPLIBS ${kodiplatform_LIBRARIES})
+
+
+file(GLOB PVRHDHOMERUNDVR_SOURCES src/*.cpp)
+file(GLOB PVRHDHOMERUNDVR_HEADERS src/*.h)
 
 
 if(WIN32)
