--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ project(pvr.hdhomerundvr)
 
 cmake_minimum_required(VERSION 2.6)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb")
+
+set(CMAKE_VERBOSE_MAKEFILE on)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
 
@@ -11,12 +12,19 @@ enable_language(CXX)
 find_package(Kodi REQUIRED)
 find_package(kodiplatform REQUIRED)
 find_package(hdhomerun REQUIRED)
+find_package(sqlite REQUIRED)
+
+find_package(uuid REQUIRED)
+find_package(curl REQUIRED)
 
 include_directories(${kodiplatform_INCLUDE_DIRS}
                     ${p8-platform_LIBRARIES}
-                    ${HDHOMERUN_INCLUDE_DIRS})
+                    ${HDHOMERUN_INCLUDE_DIRS}
+                    ${SQLITE_INCLUDE_DIRS}
+                    ${CURL_INCLUDE_DIRS})
 
-set(DEPLIBS ${kodiplatform_LIBRARIES})
+set(DEPLIBS ${kodiplatform_LIBRARIES}
+            ${CURL_LIBRARIES})
 
 
 file(GLOB PVRHDHOMERUNDVR_SOURCES src/*.cpp)
@@ -31,9 +39,12 @@ if(WIN32)
     # it's defined as _WIN32_WINNT_VISTA which breaks build on UWP
     add_definitions(-D_WIN32_WINNT=0x0A00)
   endif()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /U_WINSOCKAPI_")
+else()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb")
 endif()
 
-build_addon(pvr.hdhomerundvr PVRHDHOMERUNDVR DEPLIBS)
+build_addon(pvr.zuki.hdhomerundvr PVRHDHOMERUNDVR DEPLIBS)
 
 include(CPack)
 
